--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             <tr><td colspan="2" class='bottompanel'>&nbsp;</td></tr>
         </table>
     </center>
-    <div colorable ng-click=''>!!</div>
+    <div colorable>!!</div>
 </body>
 </html>
