--- a/src/colordialog.html
+++ b/src/colordialog.html
@@ -1,4 +1,4 @@
-<div class="dlgbox dlgborder" ng-controller='ColorDialogCtrl'>
+<div class="dlgbox dlgborder">
     <style scoped="scoped">
         .dlgbox{                       
             width: 200px;
